--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
             <p class="description">Chief Adviser of the People's Republic of Bangladesh</p>
         </div>
        </section>
+       <section>
+        <div class="news"> 
+            <h1>Recent News</h1>
+            <p class="description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+        </div>
+       </section>
+       <section>
+        <div class="sat1">
+            <div class="sat-img">
+                <img src="assets/satelite.png" alt="">
+            </div>
+            <div>
+                <h1 class="sat-head">Bangladesh Launches New Satellite</h1>
+                <img src="assets/al-jazeera.png" alt="">
+                <p class="description">Date : 01/05/2025  Time : 10:25</p>
+                <p class="description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized
+                </p>
+                <button class="btn">Read More</button>
+            </div>
+        </div>
+       </section>
     </main>
     <footer>
 
