2nd satelite lunch

--- a/index.html
+++ b/index.html
@@ -82,6 +82,23 @@
             </div>
         </div>
        </section>
+       
+       <section>
+        <div class="sat1">
+            <div>
+                <h1 class="sat-head">Bangladesh Launches New Satellite</h1>
+                <img src="assets/al-jazeera.png" alt="">
+                <p class="description">Date : 01/05/2025  Time : 10:25</p>
+                <p class="description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized
+                </p>
+                <button class="btn">Read More</button>
+            </div>
+            <div class="sat-img">
+                <img src="assets/satelite.png" alt="">
+            </div>
+        </div>
+       </section>
     </main>
     <footer>
 
