--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p class="banner-des">Idea , innovation ,<br>
                     vision and challenges in <br> New Bangladesh.
                 </p>
-                <button class="btn">Explore New Bangladesh</button>
+                <button class="btn hov">Explore New Bangladesh</button>
             </div>
             <div class="banner-image">
                 <img src="../assets/hero.png" alt="">
@@ -37,19 +37,19 @@
                 <img src="../assets/card-icon.png" alt="">
                 <h4>Digital Transformation</h4>
                 <p class="description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
-                <button class="vision-btn1">Learn More</button>
+                <button class="vision-btn1 hov">Learn More</button>
             </div>
             <div class="two">
                 <img src="../assets/card-icon.png" alt="">
                 <h4>Green Energy</h4>
                 <p class="description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
-                <button class="vision-btn2">Learn More</button>
+                <button class="vision-btn2 hov">Learn More</button>
             </div>
             <div class="three">
                 <img src="../assets/card-icon.png" alt="">
                 <h4>Modern Infrastructure</h4>
                 <p class="description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
-                <button class="vision-btn3">Learn More</button>
+                <button class="hov vision-btn3">Learn More</button>
             </div>
         </div>
        </section>
@@ -78,7 +78,7 @@
                 <p class="description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized
                 </p>
-                <button class="btn">Read More</button>
+                <button class="btn hov">Read More</button>
             </div>
         </div>
        </section>
@@ -92,16 +92,43 @@
                 <p class="description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized
                 </p>
-                <button class="btn">Read More</button>
+                <button class="btn hov">Read More</button>
             </div>
             <div class="sat-img">
                 <img src="assets/satelite.png" alt="">
             </div>
         </div>
        </section>
+
+       <section>
+        <div class="donate">
+            <h1>
+                Donate Today
+            </h1>
+            <p class="description ">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure. 
+            </p>
+        </div>
+        <div class="donate-button">
+            <button class="tk100 hov">100 Taka</button><button class="tk200 hov">200 Taka</button><button class="tk500 hov">500 Taka</button><button class="tk1000 hov">1000 Taka</button>
+        </div>
+        <div>
+            <p class="description extra">other amount taka</p>
+        </div>
+        <div class="done">
+            <button class="btn hov">Done now</button>
+        </div>
+       </section>
     </main>
     <footer>
-
+        <div>
+            <h1>Bangladesh 2.O</h1>
+        </div>
+        <div class="media">
+            <a  href="www.facebook.com"><img src="assets/facebook.png" alt=""></a>
+            <a  href="www.instagram.com"><img src="assets/instagram.png" alt=""></a>
+            <a  href="www.tweeter.com"><img src="assets/x.png" alt=""></a>
+        </div>
     </footer>
 </body>
 </html>
